--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Uczę nie tylko techniki walki, ale także odwagi, pokory i konsekwencji.</p>
       </div>
       <div class="about-image">
-        <img src="images/Piotr_Siegoczyński_2.jpeg" alt="Твоё изображение">
+        <img src="images/Piotr_Siegoczyńskii.jpeg" alt="Твоё изображение">
       </div>
     </div>
   </section>
